# reprex

./: .gitignore  README.md  datapackage.json  datapakcage.json  pyproject.toml
data/: data_1_field.csv  data_2_fields.csv  data_full.csv  example2.csv  example3.csv
pluggy/: accounts.py  authentication.py  main.py  transactions.py
schemas/: dialect.json  schema.json
scripts/: validate.py
